--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,13 +20,14 @@ build:
 requirements:
   build:
     - autoconf    # [unix]
-    - expat       # [unix]
     - curl        # [unix]
+    - expat       # [unix]
     - openssl     # [unix]
     - zlib        # [unix]
     - 7za         # [win]
   run:
     - expat       # [unix]
+    - certifi     # [unix]
     - curl        # [unix]
     - openssl     # [unix]
     - zlib        # [unix]
