--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,6 +35,7 @@ requirements:
 test:
   commands:
     - git --version
+    - git clone https://github.com/conda-forge/git-feedstock
 
 about:
   home: https://git-scm.com/
