MNT: Updated some of the pinned versions

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,8 +26,8 @@ requirements:
     - autoconf        # [unix]
     - curl            # [unix]
     - expat           # [unix]
-    - openssl  1.0*   # [unix]
-    - zlib     1.2*   # [unix]
+    - openssl 1.0.*   # [unix]
+    - zlib 1.2.*      # [unix]
     - 7za             # [win]
 
     # Workaround for conda-build issue.
@@ -35,8 +35,8 @@ requirements:
   run:
     - curl            # [unix]
     - expat           # [unix]
-    - openssl  1.0*   # [unix]
-    - zlib     1.2*   # [unix]
+    - openssl 1.0.*   # [unix]
+    - zlib 1.2.*      # [unix]
 
 test:
   commands:
