--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ source:
   sha256: 553acbf46bacc67c73b954689ad3d9ac294bf9cbe249a5b78159a1f92f37105b                                                        # [win64]
 
 build:
-  number: 2
+  number: 3
   # git hardcodes paths to external utilities (e.g. curl)
   detect_binary_files_with_prefix: true
 
@@ -25,14 +25,14 @@ requirements:
     - autoconf        # [unix]
     - curl            # [unix]
     - expat           # [unix]
-    - openssl  1.0*   # [unix]
-    - zlib     1.2*   # [unix]
+    - openssl 1.0.*   # [unix]
+    - zlib 1.2.*   # [unix]
     - 7za             # [win]
   run:
     - curl            # [unix]
     - expat           # [unix]
-    - openssl  1.0*   # [unix]
-    - zlib     1.2*   # [unix]
+    - openssl 1.0.*   # [unix]
+    - zlib 1.2.*   # [unix]
 
 test:
   commands:
