Pin `perl` for only one build of `git`

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - expat           # [unix]
     - libiconv        # [unix]
     - openssl 1.0.*   # [unix]
-    - perl            # [unix]
+    - perl 5.22.2.1   # [unix]
     - zlib 1.2.*      # [unix]
     - 7za             # [win]
 
@@ -39,7 +39,7 @@ requirements:
     - expat           # [unix]
     - libiconv        # [unix]
     - openssl 1.0.*   # [unix]
-    - perl            # [unix]
+    - perl 5.22.2.1   # [unix]
     - zlib 1.2.*      # [unix]
 
 test:
