--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ source:
   sha256: 3d451383519379dfe2f160c4c3a49e4b9e39a666698f3eea2534593cc3fb5a4e                                                        # [win64]
 
 build:
-  number: 1
+  number: 2
   skip: true  # [win and not py27]
   # git hardcodes paths to external utilities (e.g. curl)
   detect_binary_files_with_prefix: true
@@ -26,7 +26,7 @@ requirements:
     - autoconf        # [unix]
     - curl >=7.44.0,<8  # [unix]
     - expat           # [unix]
-    - libiconv        # [unix]
+    - libiconv 1.15        # [unix]
     - openssl 1.0.*   # [unix]
     - zlib 1.2.11      # [unix]
     - 7za             # [win]
@@ -36,7 +36,7 @@ requirements:
   run:
     - curl >=7.44.0,<8  # [unix]
     - expat           # [unix]
-    - libiconv        # [unix]
+    - libiconv 1.15        # [unix]
     - openssl 1.0.*   # [unix]
     - zlib 1.2.11      # [unix]
 
@@ -52,6 +52,8 @@ test:
 
     # test completions
     - bash $PREFIX/share/bash-completion/completions/git  # [unix]
+    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
+    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
 
 about:
   home: https://git-scm.com/
