--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ source:
   sha256: 3d451383519379dfe2f160c4c3a49e4b9e39a666698f3eea2534593cc3fb5a4e                                                        # [win64]
 
 build:
-  number: 2
+  number: 3
   skip: true  # [win and not py27]
   # git hardcodes paths to external utilities (e.g. curl)
   detect_binary_files_with_prefix: true
@@ -25,7 +25,7 @@ requirements:
   build:
     - autoconf        # [unix]
     - curl >=7.44.0,<8  # [unix]
-    - expat           # [unix]
+    - expat 2.2.*           # [unix]
     - libiconv 1.15        # [unix]
     - openssl 1.0.*   # [unix]
     - zlib 1.2.11      # [unix]
@@ -35,7 +35,7 @@ requirements:
     - python          # [win]
   run:
     - curl >=7.44.0,<8  # [unix]
-    - expat           # [unix]
+    - expat 2.2.*           # [unix]
     - libiconv 1.15        # [unix]
     - openssl 1.0.*   # [unix]
     - zlib 1.2.11      # [unix]
