--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -14,6 +14,8 @@ macos_min_version:
 - '10.9'
 openssl:
 - 1.0.2
+perl:
+- '5.26'
 pin_run_as_build:
   curl:
     max_pin: x
@@ -23,6 +25,8 @@ pin_run_as_build:
     max_pin: x.x
   openssl:
     max_pin: x.x.x
+  perl:
+    max_pin: x.x
   zlib:
     max_pin: x.x
 zlib:
