--- a/.ci_support/win_c_compilervs2008.yaml
+++ b/.ci_support/win_c_compilervs2008.yaml
@@ -8,6 +8,8 @@ libiconv:
 - '1.15'
 openssl:
 - 1.0.2
+perl:
+- '5.26'
 pin_run_as_build:
   curl:
     max_pin: x
@@ -17,6 +19,8 @@ pin_run_as_build:
     max_pin: x.x
   openssl:
     max_pin: x.x.x
+  perl:
+    max_pin: x.x
   zlib:
     max_pin: x.x
 zlib:
