MNT: Re-rendered with conda-smithy 3.1.6 and pinning 2018.07.01

--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -27,7 +27,11 @@ pin_run_as_build:
     max_pin: x.x.x
   perl:
     max_pin: x.x
+  tk:
+    max_pin: x.x
   zlib:
     max_pin: x.x
+tk:
+- '8.6'
 zlib:
 - '1.2'
