--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,8 @@ build:
   number: 1
   # git hardcodes paths to external utilities (e.g. curl)
   detect_binary_files_with_prefix: true
+  # we don't actually build on windows, don't need multiple VC builds
+  skip: true  # [win and vc!=14]
 
 requirements:
   build:
