--- a/.ci_support/win_c_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015vc14.yaml
@@ -23,9 +23,16 @@ pin_run_as_build:
     max_pin: x.x
   tk:
     max_pin: x.x
+  vc:
+    max_pin: x
   zlib:
     max_pin: x.x
 tk:
 - '8.6'
+vc:
+- '14'
+zip_keys:
+- - vc
+  - c_compiler
 zlib:
 - '1.2'
