--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,6 +7,8 @@ package:
 source:
   url: https://github.com/git/git/archive/v{{ version }}.tar.gz  # [not win]
   sha256: 93993babac690a06906d832a1715c3315b4787a2845aeb500f7dcc82e1599df2  # [not win]
+  patches:                                              # [not win]
+    - 0001-macOS-Do-not-use-the-system-Wish-urgh.patch  # [not win]
 
   url: https://github.com/git-for-windows/git/releases/download/v{{ version }}.windows.1/PortableGit-{{ version }}-64-bit.7z.exe  # [win64]
   sha256: cd84a13b6c7aac0e924cb4db2476e2f4379aab4b8e60246992a6c5eebeac360c  # [win64]
