--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -67,7 +67,7 @@ test:
 about:
   home: https://git-scm.com/
   license: GPL v2 and LGPL 2.1
-  license_file: COPYING
+  license_file: COPYING  # [not win]
   summary: distributed version control system
 
 extra:
