--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,23 +1,17 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-build_number_decrement:
-- '1000'
 c_compiler:
-- toolchain_c
+- gcc
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 curl:
 - '7.59'
+docker_image:
+- condaforge/linux-anvil-comp7
 expat:
 - '2.2'
 libiconv:
 - '1.15'
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
 openssl:
 - 1.0.2
 perl:
@@ -39,10 +33,5 @@ pin_run_as_build:
     max_pin: x.x
 tk:
 - '8.6'
-zip_keys:
-- - c_compiler
-  - channel_sources
-  - channel_targets
-  - build_number_decrement
 zlib:
 - '1.2'
