--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,19 +1,21 @@
-build_number_decrement:
-- '0'
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 c_compiler:
-- gcc
+- clang
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 curl:
 - '7.59'
-docker_image:
-- condaforge/linux-anvil-comp7
 expat:
 - '2.2'
 libiconv:
 - '1.15'
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 openssl:
 - 1.0.2
 perl:
@@ -35,11 +37,5 @@ pin_run_as_build:
     max_pin: x.x
 tk:
 - '8.6'
-zip_keys:
-- - c_compiler
-  - channel_sources
-  - channel_targets
-  - docker_image
-  - build_number_decrement
 zlib:
 - '1.2'
