--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,16 +6,17 @@ package:
 
 source:
   - url: https://github.com/git/git/archive/v{{ version }}.tar.gz  # [not win]
-    folder: code # [not win]
+    folder: code  # [not win]
     sha256: 7d84f5d6f48e95b467a04a8aa1d474e0d21abc7877998af945568d2634fea46a  # [not win]
-    patches:                                              # [not win]
+    patches:  # [not win]
       - 0001-macOS-Do-not-use-the-system-Wish-urgh.patch  # [not win]
-  - url: https://mirrors.edge.kernel.org/pub/software/scm/git/git-manpages-{{ version }}.tar.gz # [not win]
-    folder: manpages # [not win]
-    sha256: a5b0998f95c2290386d191d34780d145ea67e527fac98541e0350749bf76be75 # [not win]
+  - url: https://mirrors.edge.kernel.org/pub/software/scm/git/git-manpages-{{ version }}.tar.gz  # [not win]
+    folder: manpages  # [not win]
+    sha256: a5b0998f95c2290386d191d34780d145ea67e527fac98541e0350749bf76be75  # [not win]
 
-  url: https://github.com/git-for-windows/git/releases/download/v{{ version }}.windows.1/PortableGit-{{ version }}-64-bit.7z.exe  # [win64]
-  sha256: 501d8be861ebb8694df3f47f1f673996b1d1672e12559d4a07fae7a2eca3afc7  # [win64]
+  - url: https://github.com/git-for-windows/git/releases/download/v{{ version }}.windows.1/PortableGit-{{ version }}-64-bit.7z.exe  # [win64]
+    folder: .  # [win64]
+    sha256: 501d8be861ebb8694df3f47f1f673996b1d1672e12559d4a07fae7a2eca3afc7  # [win64]
 
 build:
   number: 2
