fix selector typo from #64

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,7 +45,7 @@ requirements:
     - gettext   # [unix]
     - libiconv  # [unix]
     - openssl   # [unix]
-    - pcre      # []unix
+    - pcre      # [unix]
     - perl      # [unix]
     - tk        # [unix]
     - zlib      # [unix]
