Build with pcre2 on [unix]
Git 2.31.0 drops support for version 1 of the PCRE library [1]. Update
the recipe to use version 2.

[1] https://github.com/git/git/blob/d486ca60a51c9cb1fe068803c3f540724e95e83a/Documentation/RelNotes/2.31.0.txt#L17

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,7 +39,7 @@ requirements:
     - expat     # [unix]
     - libiconv  # [unix]
     - openssl   # [unix]
-    - pcre      # [unix]
+    - pcre2     # [unix]
     - perl 5.*  # [unix]
     - zlib      # [unix]
   run:
@@ -48,7 +48,7 @@ requirements:
     - gettext   # [unix]
     - libiconv  # [unix]
     - openssl   # [unix]
-    - pcre      # [unix]
+    - pcre2     # [unix]
     - perl 5.*  # [unix]
     - tk        # [unix]
     - zlib      # [unix]
