--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,6 +45,9 @@ requirements:
     - perl 5.*  # [unix]
     - zlib      # [unix]
   run:
+    # Without the explicit dependency on curl, it seems
+    # that linux_64 fails on the symbol lookup for curl_global_sslset
+    - curl      # [unix]
     - gettext   # [unix]
     - perl 5.*  # [unix]
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
