--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,2 +1,2 @@
-MACOSX_SDK_VERSION:        # [osx and x86_64]
-  - "10.10"                # [osx and x86_64]
+c_stdlib_version:        # [osx and x86_64]
+  - "10.10"              # [osx and x86_64]
