--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -16,12 +16,12 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-curl:
-- '8'
 docker_image:
 - quay.io/condaforge/linux-anvil-aarch64
 expat:
 - '2'
+libcurl:
+- '8'
 libiconv:
 - '1'
 openssl:
