--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,13 +39,14 @@ requirements:
     - tk        # [unix]
     - gettext-tools   # [unix]
   host:
-    - libcurl   # [unix]
-    - expat     # [unix]
-    - libiconv  # [unix]
-    - openssl   # [unix]
-    - pcre2     # [unix]
-    - perl 5.*  # [unix]
-    - zlib      # [unix]
+    - libintl-devel  # [osx]
+    - libcurl        # [unix]
+    - expat          # [unix]
+    - libiconv       # [unix]
+    - openssl        # [unix]
+    - pcre2          # [unix]
+    - perl 5.*       # [unix]
+    - zlib           # [unix]
   run:
     # Without the explicit dependency on curl, it seems
     # that linux_64 fails on the symbol lookup for curl_global_sslset
