--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,2 +1,4 @@
-c_stdlib_version:        # [osx and x86_64]
-  - "10.10"              # [osx and x86_64]
+MACOSX_DEPLOYMENT_TARGET: # [osx]
+- '10.13'                 # [osx]
+c_stdlib_version:         # [osx and x86_64]
+  - "10.10"               # [osx and x86_64]
