--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -2,3 +2,6 @@ MACOSX_DEPLOYMENT_TARGET: # [osx and x86_64]
   - '10.10'               # [osx and x86_64]
 c_stdlib_version:         # [osx and x86_64]
   - "10.10"               # [osx and x86_64]
+# needed for sys/random.h
+c_stdlib_version:         # [linux]
+  - "2.28"                # [linux]
